# ray-tracing

./: .gitignore  Cargo.toml  main.py  mainwindow.ui  ray-tracing-generic  ray-tracing-native  ui_mainwindow.patch  ui_mainwindow.py
data/: scene.json  scene1.json  scene1_gen.py  scene_world1.json  scene_world2.json  zy_scene.json
src/: camera.rs  image.rs  json.rs  lib.rs  main.rs  perf.data  py.rs  random.rs  ray.rs  renderer.rs  scene.rs  simd.rs  simd_f32.rs
src/bvh/: aabb.rs  bvh.rs  mod.rs
src/hittable/: aa_rect.rs  constant_medium.rs  mod.rs  py.rs  sphere.rs  transform.rs  triangle.rs
src/hittables/: cuboid.rs  group.rs  hittable_list.rs  mod.rs  obj.rs  transform.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs  py.rs
src/pdf/: cosine.rs  hittables.rs  mixture.rs  mod.rs
src/texture/: checker.rs  image.rs  mod.rs  noise.rs  py.rs  solid_color.rs
v4ray/: __init__.pyi  material.pyi  shape.pyi  texture.pyi
v4ray_frontend/: __init__.py  camera.py  material.py  properties.py  shape.py  texture.py
