[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
async-channel = "1.6.1"
auto_impl = "0.4.1"
gdk = { version = "0.13.2", features = ["dox"] }
gdk-pixbuf = "0.9.0"
glib = "0.10.3"
gtk = "0.9.2"
itertools = "0.10.1"
nalgebra = { version = "0.27.1", features = ["serde-serialize"] }
num-traits = "0.2.14"
num_cpus = "1.13.0"
numpy = "0.13.2"
packed_simd_2 = "0.3.5"
pyo3 = { version = "0.13.2", features = ["extension-module"] }
rand = "0.8.3"
rand_pcg = "0.3.1"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simba = { version = "0.5.1", features = ["packed_simd"] }

[lib]
name = "v4ray"
crate-type = ["cdylib", "rlib"]

#[profile.release]
#debug = true
#opt-level = 0
