[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
async-channel = "1.6.1"
async-std = { version = "1.9.0", features = ["attributes"] }
auto_impl = "0.4.1"
clap = "3.0.0-beta.2"
futures = "0.3.15"
gdk = { version = "0.13.2", features = ["dox"], optional = true }
gdk-pixbuf = { version = "0.9.0", optional = true }
glib = { version = "0.10.3", optional = true }
gtk = { version = "0.9.2", optional = true }
image = "0.23.14"
itertools = "0.10.1"
nalgebra = { version = "0.27.1", features = ["serde-serialize"] }
num-traits = "0.2.14"
num_cpus = "1.13.0"
numpy = { version = "0.13.2", optional = true }
packed_simd_2 = "0.3.5"
pyo3 = { version = "0.13.2", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.13.4", features = ["async-std-runtime"], optional = true }
rand = "0.8.3"
rand_pcg = "0.3.1"
rayon = "1.5.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
simba = { version = "0.5.1", features = ["packed_simd"] }
tobj = "3.0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[lib]
name = "v4ray"
crate-type = ["cdylib", "rlib"]

[features]
gtk-frontend = ["gdk", "gdk-pixbuf", "glib", "gtk"]
python = ["numpy", "pyo3", "pyo3-asyncio"]

[profile.release]
#debug = true
#opt-level = 0
